[package]
name = "rgtk-examples"
version = "0.0.1"
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"

[build-dependencies]
gl_generator = { version = "^0.1", optional = true }
khronos_api = { version = "^0", optional = true }

[dependencies]
libc = "0.1"
gl_common = { version = "^0.1", optional = true }

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/cairo"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gdk"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"

[features]
gtk_3_10 = []
gtk_3_14 = ["gtk_3_10"]
gtk_3_16 = ["gtk_3_14"]
opengl = ["gtk_3_16", "gl_generator", "khronos_api", "gl_common"]

[[bin]]
name = "basic"

[[bin]]
name = "builder_basics"

[[bin]]
name = "cairotest"

[[bin]]
name = "cairo_threads"

[[bin]]
name = "gtktest"

[[bin]]
name = "notebook"

[[bin]]
name = "sync_widgets"

[[bin]]
name = "text_viewer"

[[bin]]
name = "treeview"

[[bin]]
name = "multithreading_context"

[[bin]]
name = "glarea"
