[package]
name = "rgtk-examples"
version = "0.0.1"
authors = ["The Gtk-rs Project Developers"]

[dependencies]
libc = "0.1"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/cairo"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gdk"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"

[dependencies.gl]
version = "^0.1"
optional = true

[dependencies.shared_library]
version = "^0.1"
optional = true

[dependencies.epoxy]
git = "https://github.com/mjkoo/epoxy-rs.git"
optional = true

[features]
gtk_3_10 = []
gtk_3_14 = ["gtk_3_10"]
gtk_3_16 = ["gtk_3_14"]
opengl = ["gtk_3_16", "gl", "shared_library", "epoxy"]

[[bin]]
name = "basic"

[[bin]]
name = "builder_basics"

[[bin]]
name = "cairotest"

[[bin]]
name = "cairo_threads"

[[bin]]
name = "gtktest"

[[bin]]
name = "notebook"

[[bin]]
name = "sync_widgets"

[[bin]]
name = "text_viewer"

[[bin]]
name = "treeview"

[[bin]]
name = "multithreading_context"

[[bin]]
name = "glarea"
